[gd_scene load_steps=3 format=3 uid="uid://c7k8i5yeqluox"]

[ext_resource type="Script" uid="uid://dg7xhkrhk10er" path="res://scripts/spawner.gd" id="1_2vbf6"]
[ext_resource type="PackedScene" uid="uid://dy2y4ioee72mg" path="res://scenes/enemy.tscn" id="2_ik2nu"]

[node name="Spawner" type="Node2D"]
script = ExtResource("1_2vbf6")
enemy = ExtResource("2_ik2nu")

[node name="UI" type="CanvasLayer" parent="."]
layer = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI"]
top_level = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 18.0
offset_right = 20.0
offset_bottom = 58.0
grow_horizontal = 2

[node name="Minute" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"

[node name="Label2" type="Label" parent="UI/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="Second" type="Label" parent="UI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyCounter" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -176.0
offset_top = -61.0
offset_right = -58.0
offset_bottom = -38.0
grow_horizontal = 0
grow_vertical = 0
text = "Enemies count:"
horizontal_alignment = 2

[node name="GrassCounter" type="Label" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -175.0
offset_top = -41.0
offset_right = -78.0
offset_bottom = -18.0
grow_horizontal = 0
grow_vertical = 0
text = "Grass count:"
horizontal_alignment = 2

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Pattern" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Elite" type="Timer" parent="."]
wait_time = 59.0
autostart = true

[node name="Hazard" type="Timer" parent="."]
wait_time = 60.0

[node name="Hazard2" type="Timer" parent="."]
wait_time = 80.0

[node name="HazardLongLine" type="Timer" parent="."]
wait_time = 150.0
autostart = true

[node name="HazardLongLineEnd" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="UniqueTimer1" type="Timer" parent="."]
wait_time = 15.0
autostart = true

[node name="UniqueTimer2" type="Timer" parent="."]

[node name="Hazard3" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Pattern" to="." method="_on_pattern_timeout"]
[connection signal="timeout" from="Elite" to="." method="_on_elite_timeout"]
[connection signal="timeout" from="Hazard" to="." method="_on_hazard_timeout"]
[connection signal="timeout" from="Hazard2" to="." method="_on_hazard_2_timeout"]
[connection signal="timeout" from="HazardLongLine" to="." method="_on_hazard_long_line_timeout"]
[connection signal="timeout" from="HazardLongLineEnd" to="." method="_on_hazard_long_line_end_timeout"]
[connection signal="timeout" from="UniqueTimer1" to="." method="_on_unique_timer_1_timeout"]
[connection signal="timeout" from="UniqueTimer2" to="." method="_on_unique_timer_2_timeout"]
[connection signal="timeout" from="Hazard3" to="." method="_on_hazard_3_timeout"]
